@@ -5,6 +5,7 @@ cdebconf (0.50) UNRELEASED; urgency=low
   * Denis Barbier
     - Fix navigation with arrow keys in the newt frontend.  Closes: #218844.
     - Provide a better example in src/test/backup.config
+    - Fix multiselect questions with the text frontend, newlines were missing.
   * Chris Tillman
     - s/debconf/cdebconf/ in man pages.
 
